syntax = "proto3";
package raft;

message LogEntry {
    string id = 1;
    int64 index = 2;
	int64 term = 3;
	bool committed = 4;
    string command = 5;
}
