syntax = "proto3";
package raft;

import "raft.proto";

service ReplicationService {
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

// Is also used as a heartbeat
message AppendEntriesRequest {
    int64 term = 1;
    string leaderID = 2;
    int64 prevLogIndex = 3;
    int64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    int64 leaderCommit = 6;
}

message LogEntryReplicationStatus {
    string logEntryID = 1;
    bool success = 2;
}

message AppendEntriesResponse {
    repeated LogEntryReplicationStatus entryStatuses = 1;
    int64 term = 2;
}